--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,14 +1,6 @@
 {
-    "next_id": 211,
+    "next_id": 309,
     "tasks": [
-        {
-            "id": 157,
-            "name": "Edit task",
-            "description": "Edit",
-            "date_start": "1999-08-28 00:00:00",
-            "date_end": "1999-08-28 00:55:00",
-            "is_complited": false
-        },
         {
             "id": 158,
             "name": "Edit taskVersion2",
@@ -43,11 +35,11 @@
         },
         {
             "id": 162,
-            "name": "name4",
-            "description": "ebgkerngk",
+            "name": "Edit taskVersion2",
+            "description": "Edit Version2",
             "date_start": "1999-08-28 00:00:00",
-            "date_end": "1999-08-28 00:35:00",
-            "is_complited": false
+            "date_end": "1999-08-28 00:55:00",
+            "is_complited": true
         },
         {
             "id": 163,
@@ -74,7 +66,7 @@
             "is_complited": false
         },
         {
-            "id": 166,
+            "id": 235,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -82,7 +74,7 @@
             "is_complited": false
         },
         {
-            "id": 167,
+            "id": 236,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -90,7 +82,7 @@
             "is_complited": false
         },
         {
-            "id": 168,
+            "id": 237,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -98,7 +90,7 @@
             "is_complited": false
         },
         {
-            "id": 169,
+            "id": 238,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -106,7 +98,7 @@
             "is_complited": false
         },
         {
-            "id": 170,
+            "id": 239,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -114,7 +106,7 @@
             "is_complited": false
         },
         {
-            "id": 171,
+            "id": 240,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -122,7 +114,7 @@
             "is_complited": false
         },
         {
-            "id": 172,
+            "id": 241,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -130,7 +122,7 @@
             "is_complited": false
         },
         {
-            "id": 173,
+            "id": 242,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -138,7 +130,7 @@
             "is_complited": false
         },
         {
-            "id": 174,
+            "id": 243,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -146,7 +138,7 @@
             "is_complited": false
         },
         {
-            "id": 175,
+            "id": 244,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -154,7 +146,7 @@
             "is_complited": false
         },
         {
-            "id": 176,
+            "id": 245,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -162,7 +154,7 @@
             "is_complited": false
         },
         {
-            "id": 177,
+            "id": 246,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -170,7 +162,7 @@
             "is_complited": false
         },
         {
-            "id": 178,
+            "id": 247,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -178,7 +170,7 @@
             "is_complited": false
         },
         {
-            "id": 179,
+            "id": 248,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -186,7 +178,7 @@
             "is_complited": false
         },
         {
-            "id": 180,
+            "id": 249,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -194,7 +186,7 @@
             "is_complited": false
         },
         {
-            "id": 181,
+            "id": 250,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -202,7 +194,7 @@
             "is_complited": false
         },
         {
-            "id": 182,
+            "id": 251,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -210,7 +202,7 @@
             "is_complited": false
         },
         {
-            "id": 183,
+            "id": 252,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -218,7 +210,7 @@
             "is_complited": false
         },
         {
-            "id": 184,
+            "id": 253,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -226,7 +218,7 @@
             "is_complited": false
         },
         {
-            "id": 185,
+            "id": 254,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -234,7 +226,7 @@
             "is_complited": false
         },
         {
-            "id": 186,
+            "id": 255,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -242,7 +234,7 @@
             "is_complited": false
         },
         {
-            "id": 187,
+            "id": 256,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -250,7 +242,7 @@
             "is_complited": false
         },
         {
-            "id": 188,
+            "id": 257,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -258,7 +250,7 @@
             "is_complited": false
         },
         {
-            "id": 189,
+            "id": 258,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -266,7 +258,7 @@
             "is_complited": false
         },
         {
-            "id": 190,
+            "id": 259,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -274,7 +266,7 @@
             "is_complited": false
         },
         {
-            "id": 191,
+            "id": 260,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -282,7 +274,7 @@
             "is_complited": false
         },
         {
-            "id": 192,
+            "id": 261,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -290,7 +282,7 @@
             "is_complited": false
         },
         {
-            "id": 193,
+            "id": 262,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -298,7 +290,7 @@
             "is_complited": false
         },
         {
-            "id": 194,
+            "id": 263,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -306,7 +298,7 @@
             "is_complited": false
         },
         {
-            "id": 195,
+            "id": 264,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -314,7 +306,7 @@
             "is_complited": false
         },
         {
-            "id": 196,
+            "id": 265,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -322,7 +314,7 @@
             "is_complited": false
         },
         {
-            "id": 197,
+            "id": 266,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -330,7 +322,7 @@
             "is_complited": false
         },
         {
-            "id": 198,
+            "id": 267,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -338,7 +330,7 @@
             "is_complited": false
         },
         {
-            "id": 199,
+            "id": 268,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -346,7 +338,7 @@
             "is_complited": false
         },
         {
-            "id": 200,
+            "id": 269,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -354,7 +346,7 @@
             "is_complited": false
         },
         {
-            "id": 201,
+            "id": 270,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -362,7 +354,7 @@
             "is_complited": false
         },
         {
-            "id": 202,
+            "id": 271,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -370,7 +362,7 @@
             "is_complited": false
         },
         {
-            "id": 203,
+            "id": 272,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -378,7 +370,7 @@
             "is_complited": false
         },
         {
-            "id": 204,
+            "id": 273,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -386,7 +378,7 @@
             "is_complited": false
         },
         {
-            "id": 205,
+            "id": 274,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -394,7 +386,7 @@
             "is_complited": false
         },
         {
-            "id": 206,
+            "id": 275,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -402,7 +394,7 @@
             "is_complited": false
         },
         {
-            "id": 207,
+            "id": 276,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -410,7 +402,7 @@
             "is_complited": false
         },
         {
-            "id": 208,
+            "id": 277,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -418,7 +410,7 @@
             "is_complited": false
         },
         {
-            "id": 209,
+            "id": 278,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
@@ -426,11 +418,243 @@
             "is_complited": false
         },
         {
-            "id": 210,
+            "id": 279,
             "name": "name4",
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
             "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 280,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 281,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 282,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 283,
+            "name": "Powder blue",
+            "description": "#B0E0E6",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:30:00",
+            "is_complited": false
+        },
+        {
+            "id": 284,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 285,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 286,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 287,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 288,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 289,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 290,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 291,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 292,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 293,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 294,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 295,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 296,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 297,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 298,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 299,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 300,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 301,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 302,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 303,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 304,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 305,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 306,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 307,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_complited": false
+        },
+        {
+            "id": 308,
+            "name": "Powder green",
+            "description": "#B0E0E6",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 13:00:00",
             "is_complited": false
         }
     ]
