content type JSON

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,5 +1,5 @@
 {
-    "next_id": 315,
+    "next_id": 328,
     "tasks": [
         {
             "id": 158,
@@ -703,6 +703,110 @@
             "description": "ebgkerngk",
             "date_start": "1999-08-28 00:00:00",
             "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 315,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 316,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 317,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 318,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 319,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 320,
+            "name": "Powder green",
+            "description": "#B0E0E6",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 13:00:00",
+            "is_completed": true
+        },
+        {
+            "id": 321,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 322,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 323,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 324,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 325,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 326,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:35:00",
+            "is_completed": false
+        },
+        {
+            "id": 327,
+            "name": "Powder green",
+            "description": "#B0E0E6",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 13:00:00",
             "is_completed": false
         }
     ]
